--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="card mb-4 shadow-sm">
       <div class="card-body">
         <form method="post">
-          <textarea name="note" class="form-control mb-3" rows="3" placeholder="✍️ Nhập ghi chú của bạn..."></textarea>
+          <textarea name="note" class="form-control mb-3" rows="3" placeholder="Nhập ghi chú của bạn..."></textarea>
           <button class="btn btn-primary px-4"><i class="bi bi-plus-circle me-1"></i> Thêm ghi chú</button>
         </form>
       </div>
